style: remove remaining google branding

--- a/public/Maintenance.html
+++ b/public/Maintenance.html
@@ -12,7 +12,7 @@
   <meta name="description" content="The fastest path from prompt to production with Gemini">
   <meta property="og:url" content="https://aistudio.google.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Google AI Studio">
+  <meta property="og:title" content="Planex Maintenance">
   <meta property="og:description" content="The fastest path from prompt to production with Gemini">
   <meta property="og:image" content="https://ai.google.dev/static/site-assets/images/share-ais-03.png">
   <meta name="mobile-web-app-capable" content="yes">
@@ -811,12 +811,12 @@
 
         f.parentNode.insertBefore(j, f);
 
-        window[l].push({ 'event': 'dataLayer_initialized', 'page_name': 'Google AI Studio' });
+        window[l].push({ 'event': 'dataLayer_initialized', 'page_name': 'Planex Maintenance' });
       })(window, document, 'script', 'dataLayer');
     }
   </script><!-- Cookie Consent -->
   <script src="./Maintenance_files/cookienotificationbar.min.js" data-glue-cookie-notification-bar-category="2A"
-    data-glue-cookie-notification-bar-site-id="Google AI Studio" nonce=""></script><!-- End Cookie Consent  -->
+    data-glue-cookie-notification-bar-site-id="Planex Maintenance" nonce=""></script><!-- End Cookie Consent  -->
   <script
     nonce="">var AF_initDataKeys = window.AF_initDataKeys || {}; var AF_dataServiceRequests = window.AF_dataServiceRequests || {}; var AF_initDataChunkQueue = window.AF_initDataChunkQueue || {}; var AF_initDataCallback = window.AF_initDataCallback || {}; var AF_initDataInitializeCallback = window.AF_initDataInitializeCallback || {}; AF_initDataKeys['4be19c93-b2cd-4b61-99e1-5c88282a19c4'] = []; AF_dataServiceRequests['4be19c93-b2cd-4b61-99e1-5c88282a19c4'] = {}; AF_initDataChunkQueue['4be19c93-b2cd-4b61-99e1-5c88282a19c4'] = AF_initDataChunkQueue['4be19c93-b2cd-4b61-99e1-5c88282a19c4'] || []; if (AF_initDataInitializeCallback['4be19c93-b2cd-4b61-99e1-5c88282a19c4']) { AF_initDataInitializeCallback['4be19c93-b2cd-4b61-99e1-5c88282a19c4'](AF_initDataKeys['4be19c93-b2cd-4b61-99e1-5c88282a19c4'], AF_initDataChunkQueue['4be19c93-b2cd-4b61-99e1-5c88282a19c4'], AF_dataServiceRequests['4be19c93-b2cd-4b61-99e1-5c88282a19c4']); } if (!AF_initDataCallback['4be19c93-b2cd-4b61-99e1-5c88282a19c4']) { AF_initDataCallback['4be19c93-b2cd-4b61-99e1-5c88282a19c4'] = function (chunk) { AF_initDataChunkQueue['4be19c93-b2cd-4b61-99e1-5c88282a19c4'].push(chunk); }; }</script>
   <script async="" src="./Maintenance_files/lazy.min.js" nonce=""></script>
