fix: force visibility and background on maintenance page

--- a/public/Maintenance.html
+++ b/public/Maintenance.html
@@ -3,6 +3,22 @@
 <html lang="en-US" dir="ltr">
 
 <head>
+  <style>
+    body {
+      background-color: #000 !important;
+      color: #fff !important;
+      visibility: visible !important;
+      opacity: 1 !important;
+    }
+
+    app-root,
+    ms-app,
+    .makersuite-layout {
+      display: block !important;
+      visibility: visible !important;
+      opacity: 1 !important;
+    }
+  </style>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><!--<base href="https://aistudio.google.com/">-->
   <base href=".">
   <link rel="preconnect" href="https://www.gstatic.com/">
